--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.16.5",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "task_distributor": "file:..",
     "xlsx": "^0.18.5"
   }
 }
