--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
+    "task_distributor": "file:..",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
