--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.533.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
